--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ body {
       font-size: 1.1em;
       padding: 8px 16px;
       border: none;
-      border-radius: 5px;
+      border-radius: 2px;
+      font-weight: lighter;
       background-color: #444;
       color: #fff;
       cursor: pointer;
